--- a/boost-frontend/src/main/web/src/index.html
+++ b/boost-frontend/src/main/web/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
-<body>
+<body class="d-flex flex-column h-100">
 <app-root></app-root>
 </body>
 </html>
