--- a/boost-frontend/src/main/web/src/index.html
+++ b/boost-frontend/src/main/web/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>&#9837&#9838</title>
+  <title>&#9837&#9838&#9838&#9839</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
